LOTS OF CHANGES

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -108,7 +108,7 @@ footer.page-footer {
     height: auto;
     padding-top: 40px;
     padding-bottom: 1px;
-    background: #ff9800;
+      background: white;
 }
 
 iframe {}
