--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -112,7 +112,7 @@ footer.page-footer {
 }
 
 #home {
-    background: url('../boston_night.jpg');
+    background: url('../images/boston_night.jpg');
     background-size: cover;
 }
 
