--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,10 +1,61 @@
+@import url('https://fonts.googleapis.com/css?family=Raleway:300,400,700');
+
+@font-face {
+  font-family: Edo;
+  src: url("../edosz.ttf");
+}
+
+body {
+  margin: 0;
+  padding: 0;
+  font-family: 'Raleway', sans-serif;
+}
+
+h3 {
+  font-weight: 300;
+  margin-bottom: 3em;
+}
+
+hr {
+  width: 10%;
+  margin: 3em auto 3em auto;
+}
+
+.text-orange {
+  color: #ff9800;
+}
+
+.text-white {
+  color: #ffffff;
+}
+
+
 .intro {
-    height:100vh;
-    width: 100%;
-    background: url('assets/images/banner.jpg') no-repeat center center;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
-    position: relative;
+  height: 100vh;
+  width: 100%;
+  background: linear-gradient(rgba(49, 109, 172, 0.8), rgba(49, 109, 172, 0.8)), url('../images/banner.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+}
+
+.title {
+  margin: 15% 0 10% 0;
+  font-family: Edo, 'Raleway', sans-serif;
+  font-size: 8em;
+  font-weight: 700;
+  letter-spacing: 0.5em;
+  color: white;
+}
+
+@media (max-width: 1200px) {
+    .title {
+        font-size: 5em;
+    }
+}
+
+@media (max-width: 800px) {
+    .title {
+        font-size: 3em;
+    }
 }
