--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Raleway:300,400,700');
+@import url(font-awesome.min.css);
 
 @font-face {
   font-family: Edo;
