--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -6,20 +6,42 @@
   src: url("../edosz.ttf");
 }
 
-body {
-  margin: 0;
-  padding: 0;
-  font-family: 'Raleway', sans-serif;
+html, body {
+  width: 100%;
+  height: 100%;
+  margin: 0px;
+  padding: 0px;
+  overflow-x: hidden;
 }
 
-h3 {
+body {
+  font-family: 'Raleway', sans-serif;
+  box-sizing: border-box;
+}
+
+h1, h2, h3, h4, h5, h6, p {
   font-weight: 300;
+}
+
+h2 {
   margin-bottom: 3em;
 }
 
 hr {
   width: 10%;
   margin: 3em auto 3em auto;
+}
+
+a {
+  color: #51acc7;;
+}
+
+a:hover {
+  color: #4899B1;
+}
+
+.container {
+  padding: 5% 0 5% 0;
 }
 
 .text-orange {
@@ -29,7 +51,6 @@ hr {
 .text-white {
   color: #ffffff;
 }
-
 
 .intro {
   height: 100vh;
@@ -41,7 +62,7 @@ hr {
 }
 
 .title {
-  margin: 15% 0 10% 0;
+  margin: 5% 10% 10% 10%;
   font-family: Edo, 'Raleway', sans-serif;
   font-size: 8em;
   font-weight: 700;
@@ -49,18 +70,50 @@ hr {
   color: white;
 }
 
+.typed-cursor {
+  border-bottom: solid 3px #ffffff;
+  opacity: 1;
+  -webkit-animation: blink 1.0s infinite;
+  -moz-animation: blink 1.0s infinite;
+  animation: blink 1.0s infinite;
+}
+
+@keyframes blink{
+  0% { opacity:1; }
+  50% { opacity:0; }
+  100% { opacity:1; }
+}
+@-webkit-keyframes blink{
+  0% { opacity:1; }
+  50% { opacity:0; }
+  100% { opacity:1; }
+}
+@-moz-keyframes blink{
+  0% { opacity:1; }
+  50% { opacity:0; }
+  100% { opacity:1; }
+}
+
 .btn {
   border-radius: 0;
 }
 
+.news {
+  background: #ffad33;
+}
+
+.news-link {
+  font-size: 125%;
+}
+
 @media (max-width: 1200px) {
-    .title {
-        font-size: 5em;
-    }
+  .title {
+    font-size: 4em;
+  }
 }
 
 @media (max-width: 800px) {
-    .title {
-        font-size: 3em;
-    }
+  .title {
+    font-size: 2.5em;
+  }
 }
