--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Raleway:300,400,700');
+@import url('https://fonts.googleapis.com/css?family=Lato:300,400');
 @import url(font-awesome.min.css);
 
 @font-face {
@@ -15,7 +15,7 @@ html, body {
 }
 
 body {
-  font-family: 'Raleway', sans-serif;
+  font-family: 'Lato', sans-serif;
   box-sizing: border-box;
 }
 
@@ -24,7 +24,7 @@ h1, h2, h3, h4, h5, h6, p {
 }
 
 h2 {
-  margin-bottom: 3em;
+  margin-bottom: 2em;
 }
 
 hr {
@@ -41,7 +41,7 @@ a:hover {
 }
 
 .container {
-  padding: 5% 0 5% 0;
+  padding: 5em 0 5em 0;
 }
 
 .text-orange {
@@ -62,10 +62,9 @@ a:hover {
 }
 
 .title {
-  margin: 5% 10% 5% 10%;
-  font-family: Edo, 'Raleway', sans-serif;
-  font-size: 8em;
-  font-weight: 700;
+  margin: 30px 0 30px 0;
+  font-family: Edo, 'Lato', sans-serif;
+  font-size: 8vw;
   letter-spacing: 0.5em;
   color: white;
 }
@@ -94,6 +93,16 @@ a:hover {
   100% { opacity:1; }
 }
 
+.intro h2 {
+  margin-bottom: 1em;
+  font-size:calc(15px + 1.25vw);
+  font-family: 'Lato', sans-serif;
+}
+
+.intro-btn {
+  margin-top: 3em;
+}
+
 .btn {
   border-radius: 0;
 }
@@ -104,16 +113,4 @@ a:hover {
 
 .news-link {
   font-size: 125%;
-}
-
-@media (max-width: 1200px) {
-  .title {
-    font-size: 4em;
-  }
-}
-
-@media (max-width: 800px) {
-  .title {
-    font-size: 2.5em;
-  }
 }
