--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -7,41 +7,50 @@
 }
 
 html, body {
-  width: 100%;
+  /*width: 100%;
   height: 100%;
   margin: 0px;
   padding: 0px;
-  overflow-x: hidden;
+  overflow-x: hidden;*/
 }
 
 body {
   font-family: 'Lato', sans-serif;
-  box-sizing: border-box;
+  /*box-sizing: border-box;*/
 }
 
 h1, h2, h3, h4, h5, h6, p {
   font-weight: 300;
 }
 
-h2 {
-  margin-bottom: 2em;
+.text-bold {
+  font-weight: 400;
+}
+
+blockquote {
+  border-left: 5px solid #316dac;
 }
 
 hr {
   width: 10%;
-  margin: 3em auto 3em auto;
+  margin: 2em auto 2em auto;
 }
 
 a {
-  color: #51acc7;;
+  color: #51acc7;
 }
 
 a:hover {
   color: #4899B1;
+  text-decoration: none;
 }
 
-.container {
-  padding: 5em 0 5em 0;
+.section-container {
+  padding: 3em 0 3em 0;
+  padding-right: 10%;
+  padding-left: 10%;
+  margin-right: auto;
+  margin-left: auto;
 }
 
 .text-orange {
@@ -50,6 +59,66 @@ a:hover {
 
 .text-white {
   color: #ffffff;
+}
+
+.navbar {
+  height: 80px;
+  background-color: transparent;
+  border: none;
+  color: white;
+  z-index: 100;
+  transition: background-color 1s ease 0s;
+  padding: 0 5px 0 0;
+}
+
+.navbar-default .navbar-brand, .navbar-default .navbar-brand:focus {
+  margin-top: 3px;
+  color: white;
+}
+
+.navbar-default .navbar-brand:hover {
+
+}
+.navbar-default .navbar-nav > li > a, .navbar-default .navbar-nav > li > a:active, .navbar-default .navbar-nav > li > a:focus {
+  color: white;
+  margin: 13px 0 13px 0;
+}
+.navbar-default .navbar-nav > li > a:hover {
+  color: #ff9800;
+  border: 1px solid #ff9800;
+}
+.navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:hover, .navbar-default .navbar-nav > .active > a:focus, .navbar-default .navbar-toggle:focus{
+  background-color: transparent;
+  color: #ff9800;
+}
+.navbar-default .navbar-toggle {
+  border-color: #ff9800;
+  margin-top: 20px;
+}
+.navbar-default .navbar-toggle:hover {
+  background-color: #316dac;
+}
+.navbar-default .navbar-toggle .icon-bar {
+  color: #ff9800;
+  background-color: #ff9800;
+}
+.navbar-default .navbar-collapse.collapse.in ul {
+  background-color: rgba(49, 109, 172, 0.8);
+}
+
+/* Solid class attached on scroll past first section */
+.solid {
+  background-color: rgba(49, 109, 172, 0.8);
+  transition: background-color 1s ease 0s;
+  box-shadow: 0 0 4px grey;
+}
+
+.solid .navbar-brand {
+
+}
+
+.solid .navbar-nav > li > a {
+
 }
 
 .intro {
@@ -62,7 +131,7 @@ a:hover {
 }
 
 .title {
-  margin: 30px 0 30px 0;
+  margin: 100px 0 30px 0;
   font-family: Edo, 'Lato', sans-serif;
   font-size: 8vw;
   letter-spacing: 0.5em;
@@ -107,10 +176,18 @@ a:hover {
   border-radius: 0;
 }
 
-.news {
+.orange-container {
   background: #ffad33;
 }
 
 .news-link {
   font-size: 125%;
+}
+
+.footer {
+  background: #316dac;
+}
+
+.footer a, .footer a:hover {
+  color: #ffffff;
 }
