--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -68,7 +68,7 @@ a:hover {
   color: white;
   z-index: 100;
   transition: background-color 1s ease 0s;
-  padding: 0 5px 0 0;
+  padding: 0 10px 0 0;
 }
 
 .navbar-default .navbar-brand, .navbar-default .navbar-brand:focus {
@@ -182,6 +182,18 @@ a:hover {
 
 .news-link {
   font-size: 125%;
+}
+
+.card {
+    /* Add shadows to create the "card" effect */
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    padding: 15px;
+}
+
+/* On mouse-over, add a deeper shadow */
+.card:hover {
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
 }
 
 .footer {
