--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -195,6 +195,8 @@ nav {
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
   transition: 0.3s;
   padding: 15px;
+  background: #ffffff;
+  margin: 15px;
 }
 
 /* On mouse-over, add a deeper shadow */
